--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "koa": "^3.0.3"
+    "koa": "^3.0.3",
+    "node-html-parser": "^7.0.1"
   }
 }
