--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "source": "script/main.js",
   "outputFormat": "global",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "git subtree push --prefix dist origin gh-pages",
+    "build": "npx parcel build index.html",
+    "bundle": "node concat-js dist dist/bundle.js"
   },
   "targets": {
     "default": {
